--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<p>This is a test text!</p>
-<button mat-raised-button color="primary">Hello Material</button>
-<button mat-raised-button color="accent">Hello Material</button>
-<button mat-raised-button color="warn">Hello Material</button>
-<button mat-raised-button color="theme">Hello Material</button>
-<router-outlet></router-outlet>
+<app-shell>
+  <h1>Hello, world!</h1>
+  <router-outlet></router-outlet>
+</app-shell>
