dialogs and delete button
Created dialogs for new boards and new tasks and created the delete
button to delete boards and tasks.
The only remaining problem is something related to firestore security
rules because I cannot delete a board but I can delete a task.

--- a/src/app/kanban/board-list/board-list.component.scss
+++ b/src/app/kanban/board-list/board-list.component.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.board {
+  border: 5px dashed transparent;
+  margin: 0 10px;
+}
+
 .cdk-drag-placeholder {
   opacity: 0.2;
   width: 350px;
